src/global.css
@import "tailwindcss";
@import "@navikt/ds-css" layer(components);
@plugin "@tailwindcss/typography";
@config '../tailwind.config.js';

.prose-compact {
    /* Make sure bullet points in lists are correct color */
    --tw-prose-bullets: currentColor;
    --tw-prose-counters: currentColor;

    /* Compact horizontal rule, make sure border color is same color as font */
    & hr {
        /* Soften up horizontal-rule */
        border-color: #9a9a9a;
        margin-top: 1.5rem;
        margin-bottom: 1.5rem;
    }

    & :is(ul, ol) {
        padding-left: 1.25em !important;
    }
    & :is(li) {
        margin-top: 0 !important;
        margin-bottom: 0 !important;
        padding-left: 0 !important;
        padding-top: 0 !important;
        padding-bottom: 0 !important;
    }

    /* Not sure why but list-elements sometimes wrap items in p, make sure not to add extra space */
    & :is(ul, ol) > li > p {
        margin-top: 0 !important;
        margin-bottom: 0 !important;
    }

    /* Dont add extra space inside nested lists */
    & li > :is(ul, ol) {
        margin-top: 0 !important;
        margin-bottom: 0 !important;
    }

}

